<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <MultiAutoCompleteTextView
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:textColor="@color/textColor"
                android:textSize="@dimen/inputText"
                android:minLines="6"
                android:gravity="top"
                android:hint="@string/content"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>

