<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/createNote"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_note" />

    <item
        android:id="@+id/createArticle"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_article" />

    <item
        android:id="@+id/createLike"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_like" />

    <item
        android:id="@+id/createReply"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_reply" />

    <item
        android:id="@+id/createRepost"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_repost" />

</menu>